--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-    height: 100svh;
+    /* height: 100svh; */
     background:#0b1522;
 }
 
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     align-items:center;
     justify-content: center;
+    margin-top: -3rem;
 }
 
 h1{
