--- a/static/invitation.css
+++ b/static/invitation.css
@@ -9,6 +9,7 @@ h1 {
     font-size: 3rem;
     /* padding-bottom: 5px; */
     font-family: "Protest Riot", sans-serif;
+    width: 100%;
 }
 
 #name {
